problemas con el carrusel

--- a/accesorios.html
+++ b/accesorios.html
@@ -65,50 +65,50 @@
   <div class="row">
 
 <br>
-      <div class="col s6 offset-s3 center"><h3 class=" cyan-text text-darken-4">Salas</<h3></div></div>
+      <div class="col s6 offset-s3 center"><h3 class=" cyan-text text-darken-4">Accesorios</<h3></div></div>
 <br><div class="linea"></div><br>
 
 
     <div class="row">
     <div class="card col m3 s6">
     <div class="card-image waves-effect waves-block waves-light ">
-      <img class="activator" src="img/sala1.png" >
+      <img class="activator" src="img/ac1.jpg" >
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Casablanca Sala Modular de Tela - Varios Colores<i class="material-icons right">more_vert</i></span>
-      <p  class="brown-text text-lighten-2">$ 21,397.00</p>
+      <span class="card-title activator grey-text text-darken-4">Planteur Macetero de MDF Impermeabilizado<i class="material-icons right">more_vert</i></span>
+      <p  class="brown-text text-lighten-2">$ 1,398.00</p>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Casablanca Sala Modular de Tela - Varios Colores<i class="material-icons right">close</i></span>
-      <p>El sillón está compuesto por 3 módulos que se pueden separar y acomodar de la manera que decide el usuario. Incluye un módulo de sillon de 2 plazas, un sillón individual y un sillón chaise.
-
-Sillón Modular estructura de pino estufado. Hule espuma de 30kg en asiento y de 20 kg en cuerpo. Cojines rellenos de hueca Premium. Tapizado en tela. Patas cromadas</p>
+      <span class="card-title grey-text text-darken-4">Planteur Macetero de MDF Impermeabilizado<i class="material-icons right">close</i></span>
+      <p>Porta Macetas fabricado en MDF impermeabilizado al poliuretano y laca de color negro y natural impermeabilizada. Ofrecemos 6 meses de garantía en defectos de fabricación. Limpiar con trapo húmedo y silicón para muebles. Mueble diseñado y fabricado en México.</p>
     </div>
   </div>
   <div class="card col m3 s6">
   <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="img/sala2.png">
+    <img class="activator" src="img/ac2.jpg">
   </div>
   <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Archi Sillón Individual de Pino y Tela <i class="material-icons right">more_vert</i></span>
-    <p class="brown-text text-lighten-2">$ 4,897.00</p>
+    <span class="card-title activator grey-text text-darken-4">Limay Sujetalibros de Mármol<i class="material-icons right">more_vert</i></span>
+    <p class="brown-text text-lighten-2">$ 1,297.00</p>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Archi Sillón Individual de Pino y Tela <i class="material-icons right">close</i></span>
-    <p>Sillón Individual de estructura de pino estufado. Hule espuma de 30kg en asiento y de 20kg en cuerpo. Cojín relleno de hueca Premium. Tapizado en tela. </p>
+    <span class="card-title grey-text text-darken-4">Limay Sujetalibros de Mármol<i class="material-icons right">close</i></span>
+    <p>Sujetalibros fabricado en Mármol negro nacional con acabado pulido mate y sellado. Son dos piezas encajadas por lo que se puede desarmar sin ninguna dificultad y facilita el empaque.</p>
   </div>
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/sillon3.png">
+  <img class="activator" src="img/ac3.jpg">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Barron Sillón Individual de Pino y Tela<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$9,299.00<del>$13,690.00</del></p>
+  <span class="card-title activator grey-text text-darken-4">Boue Jarrón de Rombos de Barro Oaxaqueño<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 748.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Barron Sillón Individual de Pino y Tela<i class="material-icons right">close</i></span>
-  <p>Sillón de estructura de pino con hule de espuma de 27 ''.La tela es muy suave al tacto y de fácil lavado en seco.</p>
+  <span class="card-title grey-text text-darken-4">Boue Jarrón de Rombos de Barro Oaxaqueño<i class="material-icons right">close</i></span>
+  <p>Pieza para interior realizada artesanalmente en San Bartolo Coyotepec con una nueva técnica innovadora para el tradicional barro negro, consiste en la cocción de la arcilla en horno de gas para conservar su color original, adicionalmente se le agrega una capa de barniz para mayor protección y resistencia del medio ambiente. Limpiar con un paño suave húmedo. Producto hecho por Artesanos Mexicanos, cada pieza es única y debido a que se realizan a mano pueden presentar ciertas diferencias entre ellos.
+
+</p>
 </div>
 </div>
 <div class="card col m3 s6">
@@ -247,13 +247,14 @@ Sillón Modular estructura de pino estufado. Hule espuma de 30kg en asiento y de
 
 
 
-  <div class="carousel ">
-    <a class="carousel-item" href="recamara.html"><img src="img/recamara.jpg"><p class="brown-text text-lighten-2">Recamaras</p><div class="pie">
-    </div></a>
+<div class="carousel ">
+  <a class="carousel-item" href="salas.html"><img src="img/sala.jpg"><p class="brown-text text-lighten-2">Salas</p><div class="pie">
 
-    <a class="carousel-item" href="salas.html"><img src="img/sala.jpg"><p class="brown-text text-lighten-2">Salas</p></a>
-    <a class="carousel-item" href="accesorios.html"><img src="img/acc.jpg"><p class="brown-text text-lighten-2">Accesorios</p></a>
-  </div>
+
+  </div></a>
+  <a class="carousel-item" href="accesorios.html"><img src="img/acc.jpg"><p class="brown-text text-lighten-2">Accesorios</p></a>
+  <a class="carousel-item" href="recamara.html"><img src="img/recamara.jpg"><p class="brown-text text-lighten-2">Recamaras</p></a>
+</div>
 
   </div>
 
