--- a/recamara.html
+++ b/recamara.html
@@ -255,7 +255,7 @@ Incluye: Sábana de cajón, sabana plana y un par de fundas de almohada y duvet 
 
     </div></a>
     <a class="carousel-item" href="accesorios.html"><img src="img/acc.jpg"><p class="brown-text text-lighten-2">Accesorios</p></a>
-    <a class="carousel-item" href="recamara.html"><img src="img/recamara.jpg"><p class="brown-text text-lighten-2"><a href="recamara.html">Recamaras</a></p></a>
+    <a class="carousel-item" href="recamara.html"><img src="img/recamara.jpg"><p class="brown-text text-lighten-2">Recamaras</p></a>
   </div>
 
   </div>
