--- a/accesorios.html
+++ b/accesorios.html
@@ -37,7 +37,7 @@
 
 
     <div class="parallax-container">
-          <div class="parallax"><img src="img/sala-bar.jpg">
+          <div class="parallax"><img src="img/deco.jpg">
             <div class="container imagen-fondo">
             <br><br>
             <div class="row renglon">
@@ -113,14 +113,14 @@
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/sala3.png">
+  <img class="activator" src="img/ac5.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Ibiza Sillón Modular de Pino y Tela<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$15,686.00</p>
+  <span class="card-title activator grey-text text-darken-4">Bump Espejo de Metal<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 2,299.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Ibiza Sillón Modular de Pino y Tela <i class="material-icons right">close</i></span>
+  <span class="card-title grey-text text-darken-4">Bump Espejo de Metal<i class="material-icons right">close</i></span>
   <p>El sillón está compuesto por 4 módulos que se pueden separar y acomodar de la manera que decide el usuario. Incluye un módulo de sillon de 2 plazas, un sillón individual, un sillón esquinero y un taburete.</p>
 </div>
 </div>
@@ -131,54 +131,59 @@
 
   <div class="card col m3 s6">
   <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="img/sala4.png">
+    <img class="activator" src="img/ac6.png">
   </div>
   <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Leviato Sillón de 3 Plazas de Parota<i class="material-icons right">more_vert</i></span>
-    <p class="brown-text text-lighten-2">$ 19,999.00</p>
+    <span class="card-title activator grey-text text-darken-4">Zolen Perchero de Acero<i class="material-icons right">more_vert</i></span>
+    <p class="brown-text text-lighten-2">$ 1,999.00</p>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Leviato Sillón de 3 Plazas de Parota<i class="material-icons right">close</i></span>
-    <p>Sillón de estructura de pino estufado. Hule espuma de 30kg en asiento y de 20kg en cuerpo. Cojines rellenos de hueca Premium.</p>
+    <span class="card-title grey-text text-darken-4">Zolen Perchero de Acero<i class="material-icons right">close</i></span>
+    <p>inspirado en el mobiliario de George Nelson, dinámico y elegante.</p>
   </div>
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/sala5.png">
+  <img class="activator" src="img/ac7.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Ibiza Sillón de 2 Plazas de Pino y Tela<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$6,690.00</p>
+  <span class="card-title activator grey-text text-darken-4">Erbio Lámpara de Techo de Alambre<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 1,499.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Ibiza Sillón de 2 Plazas de Pino y Tela<i class="material-icons right">close</i></span>
-  <p>Sillón de estructura de pino estufado. Hule espuma de 24kg en asiento y de 20kg en cuerpo.</p>
+  <span class="card-title grey-text text-darken-4">Erbio Lámpara de Techo de Alambre<i class="material-icons right">close</i></span>
+  <p>Lámpara colgante con pantalla fabricada con alambre electro-soldado pintado, (powder coating) forrado con estireno y finalmente con tela, disco de acrílico 3 luces. Para uso en interior.</p>
 </div>
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/sala6.png">
+  <img class="activator" src="img/ac8.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Ibiza Sillón Esquinero de Pino y Tela<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$3,499.00 </p>
+  <span class="card-title activator grey-text text-darken-4">Tali Maceta de Concreto<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 549.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Ibiza Sillón Esquinero de Pino y Tela<i class="material-icons right">close</i></span>
-  <p>Sillón de estructura de pino estufado. Hule espuma de 24kg en asiento y de 20kg en cuerpo.</p>
+  <span class="card-title grey-text text-darken-4">Tali Maceta de Concreto<i class="material-icons right">close</i></span>
+  <p>Maceta de concreto pigmentado, es el resultado de combinar procesos de fabricación digital y diseño 3D con procesos artesanales.<br>Cuidados: Limpiar con un paño húmedo.<br>*No incluye planta</p>
 </div>
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/mesa2.png">
+  <img class="activator" src="img/ac9.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Ollei Credenza de Cristal<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$5,199.00 <del>$8,214.00</del></p>
+  <span class="card-title activator grey-text text-darken-4">Yoltic Maceta de Concreto<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 549.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Ollei Credenza de Cristal<i class="material-icons right">close</i></span>
-  <p>Credenza de cristal templado.</p>
+  <span class="card-title grey-text text-darken-4">Yoltic Maceta de Concreto<i class="material-icons right">close</i></span>
+  <p>Maceta de concreto pigmentado, es el resultado de combinar procesos de fabricación digital y diseño 3D con procesos artesanales.<br>
+
+Cuidados: Limpiar con un paño húmedo.
+<br>
+
+*No incluye planta</p>
 </div>
 </div>
   </div>
@@ -188,56 +193,56 @@
 
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/sala7.jpg">
+  <img class="activator" src="img/ac10.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Dellen Sillón de 2 Plazas Estilo Moderno<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$ 14,099.00</p>
+  <span class="card-title activator grey-text text-darken-4">Nub Lámpara de Acero<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 4,399.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Dellen Sillón de 2 Plazas Estilo Moderno<i class="material-icons right">close</i></span>
-  <p>El sillón Dellen tiene una estructura interna de madera de pino con ensamble en espiga, un ensamble que impide la fatiga de la estructura evitando que el mueble rechine o incluso se pueda llegar a fracturar. El cuerpo es de hule espuma la cual tiene una densidad de más de 30kg, siendo 24kg el estándar sugerido. Está tapizado con una tela de tejido muy cerrado que evita la rápida penetración de líquidos, tiene un forro interior que hace adherencia al delcrón, un laminado acolchado de fibras de poliéster que cubre toda la espuma y evita que se arrugue de manera permanente.</p>
+  <span class="card-title grey-text text-darken-4">Nub Lámpara de Acero<i class="material-icons right">close</i></span>
+  <p>Lámapara de varilla de acero redonda, incluye 1m de cable textil redondo, 1m de cadena color negro, canope y foco de filamento de 40w, ideal para interiores o exteriores.</p>
 </div>
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/sala8.jpg">
+  <img class="activator" src="img/ac11.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Dellen Sillón Individual de Estilo Moderno <i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$ 9,499.00</p>
+  <span class="card-title activator grey-text text-darken-4">Poli Cuadro de Laminado y Cristal<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 1,799.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Dellen Sillón Individual de Estilo Moderno <i class="material-icons right">close</i></span>
-  <p>El sillón Dellen tiene una estructura interna de madera de pino con ensamble en espiga, un ensamble que impide la fatiga de la estructura evitando que el mueble rechine o incluso se pueda llegar a fracturar. El cuerpo es de hule espuma la cual tiene una densidad de más de 30kg, siendo 24kg el estándar sugerido. Está tapizado con una tela de tejido muy cerrado que evita la rápida penetración de líquidos, tiene un forro interior que hace adherencia al delcrón, un laminado acolchado de fibras de poliéster que cubre toda la espuma y evita que se arrugue de manera permanente.</p>
+  <span class="card-title grey-text text-darken-4">Poli Cuadro de Laminado y Cristal<i class="material-icons right">close</i></span>
+  <p>Cuadro decorativo con marco laminado y cristal.</p>
 </div>
 </div>
 
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/sala10.jpg">
+  <img class="activator" src="img/ac12.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Chaleur Sofá Cama de Madera de Pino<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$ 27,999.00 </p>
+  <span class="card-title activator grey-text text-darken-4">Sendero Impresión Fotográfica<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 1,799.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Chaleur Sofá Cama de Madera de Pino<i class="material-icons right">close</i></span>
-  <p>El sofá Chaleur tiene una estructura interna de madera de pino con ensamble en espiga, un ensamble que impide la fatiga de la estructura evitando que el mueble rechine o incluso se pueda llegar a fracturar. El cuerpo es de hule espuma la cual tiene una densidad de más de 30kg, siendo 24kg el estándar sugerido. Está tapizado con una tela de tejido muy cerrado que evita la rápida penetración de líquidos, tiene un forro interior que hace adherencia al delcrón, un laminado acolchado de fibras de poliéster que cubre toda la espuma y evita que se arrugue de manera permanente.</p>
+  <span class="card-title grey-text text-darken-4">Sendero Impresión Fotográfica<i class="material-icons right">close</i></span>
+  <p>Cuadro de acrílico de 3 mm de grosor con impresión fotográfica y terminado láser montado sobre marco oculto de aluminio blanco.</p>
 </div>
 </div>
 
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/salas9.png">
+  <img class="activator" src="img/ac13.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Liena Sofá de 3 Plazas Combinables <i class="material-icons right">more_vert</i></span>
+  <span class="card-title activator grey-text text-darken-4">Radio Lámpara de Mesa de Madera<i class="material-icons right">more_vert</i></span>
   <p class="brown-text text-lighten-2">$$ 17,099.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Liena Sofá de 3 Plazas Combinables de Tela <i class="material-icons right">close</i></span>
-  <p>El sofá tiene una estructura interna fabricada de madera de pino en espiga, un ensamble que impide la fatiga de la estructura evitando que el mueble rechine o incluso se pueda llegar a fracturar. El cuerpo es de hule espuma de alta densidad. Está tapizado con una tela de tejido muy cerrado que evita la rápida penetración de líquidos, tiene un forro interior que hace adherencia al delcrón, un laminado acolchado de fibras de poliéster que cubre toda la espuma y evita que se arrugue de manera permanente. Las patas son de acero cromado.</p>
+  <span class="card-title grey-text text-darken-4">Radio Lámpara de Mesa de Madera<i class="material-icons right">close</i></span>
+  <p>Lámpara de Madera acabado wengue, pantalla fabricada con alambre electro-soldado pintado, (powder coating) forrado con estireno y finalmente con tela. Para uso en interior.</p>
 </div>
 </div>
 
@@ -255,6 +260,16 @@
   <a class="carousel-item" href="accesorios.html"><img src="img/acc.jpg"><p class="brown-text text-lighten-2">Accesorios</p></a>
   <a class="carousel-item" href="recamara.html"><img src="img/recamara.jpg"><p class="brown-text text-lighten-2">Recamaras</p></a>
 </div>
+
+<div class="animacion">
+  <div class="container">
+    <div class="col s12 center"><a href="index.html"><p class="letrac brown-text text-darken-4">Regresar a Inicio</p></a>
+    </div>
+  </div>
+</div>
+
+
+
 
   </div>
 
