--- a/contacto.html
+++ b/contacto.html
@@ -117,13 +117,15 @@
 
 
 
-  </div><br><div class="linea"></div><br>
-</div>
+  <br><div class="linea"></div><br>
 
 
+  <div class="animacion">
+    <div class="container">
+      <div class="col s12 center"><a href="index.html"><p class="letrac brown-text text-darken-4">Regresar a Inicio</p></a>
+      </div>
+    </div>
   </div>
-
-
 
 
     <footer class="page-footer teal lighten-4 ">
