--- a/info.html
+++ b/info.html
@@ -57,7 +57,12 @@
 
 </div>
 
-
+<div class="animacion">
+  <div class="container">
+    <div class="col s12 center"><a href="index.html"><p class="letrac brown-text text-darken-4">Regresar a Inicio</p></a>
+    </div>
+  </div>
+</div>
     <footer class="page-footer teal lighten-4 ">
             <div class="container">
               <div class="row">
