--- a/recamara.html
+++ b/recamara.html
@@ -249,18 +249,24 @@ Incluye: Sábana de cajón, sabana plana y un par de fundas de almohada y duvet 
 
 
 
-  <div class="carousel ">
-    <a class="carousel-item" href="salas.html"><img src="img/sala.jpg"><p class="brown-text text-lighten-2">Salas</p><div class="pie">
+<div class="carousel ">
+  <a class="carousel-item" href="salas.html"><img src="img/sala.jpg"><p class="brown-text text-lighten-2">Salas</p><div class="pie">
 
 
-    </div></a>
-    <a class="carousel-item" href="accesorios.html"><img src="img/acc.jpg"><p class="brown-text text-lighten-2">Accesorios</p></a>
-    <a class="carousel-item" href="recamara.html"><img src="img/recamara.jpg"><p class="brown-text text-lighten-2">Recamaras</p></a>
+  </div></a>
+  <a class="carousel-item" href="accesorios.html"><img src="img/acc.jpg"><p class="brown-text text-lighten-2">Accesorios</p></a>
+  <a class="carousel-item" href="recamara.html"><img src="img/recamara.jpg"><p class="brown-text text-lighten-2">Recamaras</p></a>
+</div>
+
   </div>
 
+
+  <div class="animacion">
+    <div class="container">
+      <div class="col s12 center"><a href="index.html"><p class="letrac brown-text text-darken-4">Regresar a Inicio</p></a>
+      </div>
+    </div>
   </div>
-
-
 
 
     <footer class="page-footer teal lighten-4 ">
