--- a/salas.html
+++ b/salas.html
@@ -247,17 +247,21 @@ Sillón Modular estructura de pino estufado. Hule espuma de 30kg en asiento y de
 
 
 
-  <div class="carousel ">
-    <a class="carousel-item" href="recamara.html"><img src="img/recamara.jpg"><p class="brown-text text-lighten-2">Recamaras</p><div class="pie">
-    </div></a>
+<div class="carousel ">
+  <a class="carousel-item" href="salas.html"><img src="img/sala.jpg"><p class="brown-text text-lighten-2">Salas</p><div class="pie">
+  </div></a>
+  <a class="carousel-item" href="accesorios.html"><img src="img/acc.jpg"><p class="brown-text text-lighten-2">Accesorios</p></a>
+  <a class="carousel-item" href="recamara.html"><img src="img/recamara.jpg"><p class="brown-text text-lighten-2">Recamaras</p></a>
+</div>
 
-    <a class="carousel-item" href="salas.html"><img src="img/sala.jpg"><p class="brown-text text-lighten-2">Salas</p></a>
-    <a class="carousel-item" href="accesorios.html"><img src="img/acc.jpg"><p class="brown-text text-lighten-2">Accesorios</p></a>
   </div>
 
+  <div class="animacion">
+    <div class="container">
+      <div class="col s12 center"><a href="index.html"><p class="letrac brown-text text-darken-4">Regresar a Inicio</p></a>
+      </div>
+    </div>
   </div>
-
-
 
 
     <footer class="page-footer teal lighten-4 ">
