--- a/somos.html
+++ b/somos.html
@@ -61,11 +61,13 @@
 
 
   </div><br><div class="linea"></div><br>
-</div>
 
-
+  <div class="animacion">
+    <div class="container">
+      <div class="col s12 center"><a href="index.html"><p class="letrac brown-text text-darken-4">Regresar a Inicio</p></a>
+      </div>
+    </div>
   </div>
-
 
 
 
