ahora sí es una páigna muy responsiva

--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,7 @@
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <meta charset=UTF-8>
     </head>
 
     <body class="fondo">
@@ -27,9 +28,12 @@
 
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a class="brown-text text-darken-4" href="index.html.html">Inicio</a></li>
+        <li><a class="brown-text text-darken-4" href="index.html">Inicio</a></li>
         <li><a class="brown-text text-darken-4" href="somos.html">¿Quienes somos?</a></li>
         <li><a class="brown-text text-darken-4" href="contacto.html">Contáctanos</a></li>
+        <li><a class="brown-text text-darken-4" href="recamara.html">Recámara</a></li>
+        <li><a class="brown-text text-darken-4" href="salas.html">Salas</a></li>
+        <li><a class="brown-text text-darken-4" href="accesorios.html">Accesorios</a></li>
       </ul>
       </div>
     </nav>
