--- a/index.html
+++ b/index.html
@@ -11,45 +11,50 @@
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+      <meta charset=UTF-8>
     </head>
 
     <body class="fondo">
 
 
       <nav>
-      <div class="nav-wrapper teal lighten-4">
-        <a href="#!" class="brand-logo brown-text text-darken-4">&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/logo.png" id="logo" >&nbsp;&nbsp;MUEBs</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse brown-text text-darken-4"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down menu">
-        <li class="active"><a class="brown-text text-darken-4" href="index.html"><b>Inicio</b></a></li>
-        <li ><a class="brown-text text-darken-4" href="somos.html"><b>¿Quiénes somos?</b></a></li>
-        <li><a class="brown-text text-darken-4" href="contacto.html"><b>Cantáctanos</b></a></li>
+             <div class="nav-wrapper teal lighten-4">
+               <a href="#!" class="brand-logo brown-text text-darken-4">&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/logo.png" id="logo" >&nbsp;&nbsp;MUEBs</a>
+               <a href="#" data-activates="mobile-demo" class="button-collapse brown-text text-darken-4"><i class="material-icons">menu</i></a>
+             <ul class="right hide-on-med-and-down menu">
+               <li class="active"><a class="brown-text text-darken-4" href="index.html"><b>Inicio</b></a></li>
+               <li ><a class="brown-text text-darken-4" href="somos.html"><b>¿Quiénes somos?</b></a></li>
+               <li><a class="brown-text text-darken-4" href="contacto.html"><b>Cantáctanos</b></a></li>
 
-      </ul>
-      <ul class="side-nav" id="mobile-demo">
-        <li><a class="brown-text text-darken-4" href="index.html.html">Inicio</a></li>
-        <li><a class="brown-text text-darken-4" href="somos.html">¿Quienes somos?</a></li>
-        <li><a class="brown-text text-darken-4" href="contacto.html">Contáctanos</a></li>
-      </ul>
-      </div>
-    </nav>
+             </ul>
+             <ul class="side-nav" id="mobile-demo">
+               <li><a class="brown-text text-darken-4" href="index.html">Inicio</a></li>
+               <li><a class="brown-text text-darken-4" href="somos.html">¿Quienes somos?</a></li>
+               <li><a class="brown-text text-darken-4" href="contacto.html">Contáctanos</a></li>
+               <li><a class="brown-text text-darken-4" href="recamara.html">Recámara</a></li>
+               <li><a class="brown-text text-darken-4" href="salas.html">Salas</a></li>
+               <li><a class="brown-text text-darken-4" href="accesorios.html">Accesorios</a></li>
+             </ul>
+             </div>
+        </nav>
 
 
 
     <div class="parallax-container">
-          <div class="parallax"><img src="img/back1.jpg">
+          <div class="parallax"><img src="img/back1.jpg" class="responsive-img">
             <div class="container imagen-fondo">
             <br><br>
             <div class="row renglon">
-              <div class="col s4 center white-text card card-back"><h3 class="cyan-text text-accent-3">LOS MEJORES</h3>
+              <div class="col s4 center white-text card card-back"><h3 class="cyan-text text-accent-3 slo">LOS MEJORES</h3>
               </div>
             </div>
             <div class="row renglon">
-              <div class="col s4 offset-s4 center white-text card transparent "><h1 class="h">MUEBLES</h1>
+              <div class="col s4 offset-s4 center white-text card transparent "><h1 class="h slo">MUEBLES</h1>
               </div>
             </div>
             <div class="row renglon">
-              <div class="col s5 offset-s8 center white-text card card-back"><h3 class="cyan-text text-accent-3 ">PARA TU HOGAR</h3>
+              <div class="col s5 offset-s8 center white-text card card-back"><h3 class="cyan-text text-accent-3 slo">PARA TU HOGAR</h3>
               </div>
             </div>
             </div>
