--- a/accesorios.html
+++ b/accesorios.html
@@ -11,6 +11,7 @@
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <meta charset=UTF-8>
     </head>
 
     <body class="fondo">
@@ -27,9 +28,12 @@
 
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a class="brown-text text-darken-4" href="index.html.html">Inicio</a></li>
+        <li><a class="brown-text text-darken-4" href="index.html">Inicio</a></li>
         <li><a class="brown-text text-darken-4" href="somos.html">¿Quienes somos?</a></li>
         <li><a class="brown-text text-darken-4" href="contacto.html">Contáctanos</a></li>
+        <li><a class="brown-text text-darken-4" href="recamara.html">Recámara</a></li>
+        <li><a class="brown-text text-darken-4" href="salas.html">Salas</a></li>
+        <li><a class="brown-text text-darken-4" href="accesorios.html">Accesorios</a></li>
       </ul>
       </div>
     </nav>
@@ -37,19 +41,19 @@
 
 
     <div class="parallax-container">
-          <div class="parallax"><img src="img/deco.jpg">
+          <div class="parallax"><img src="img/deco.jpg" class="responsive-img">
             <div class="container imagen-fondo">
             <br><br>
             <div class="row renglon">
-              <div class="col s4 center white-text card card-back"><h3 class="cyan-text text-accent-3">LOS MEJORES</h3>
+              <div class="col s4 center white-text card card-back"><h3 class="cyan-text text-accent-3 slo">LOS MEJORES</h3>
               </div>
             </div>
             <div class="row renglon">
-              <div class="col s4 offset-s4 center white-text card transparent "><h1 class="h">MUEBLES</h1>
+              <div class="col s4 offset-s4 center white-text card transparent "><h1 class="h slo">MUEBLES</h1>
               </div>
             </div>
             <div class="row renglon">
-              <div class="col s5 offset-s8 center white-text card card-back"><h3 class="cyan-text text-accent-3 ">PARA TU HOGAR</h3>
+              <div class="col s5 offset-s8 center white-text card card-back"><h3 class="cyan-text text-accent-3 slo">PARA TU HOGAR</h3>
               </div>
             </div>
             </div>
