--- a/somos.html
+++ b/somos.html
@@ -11,6 +11,7 @@
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <meta charset=UTF-8>
     </head>
 
     <body class="fondo">
@@ -27,9 +28,12 @@
 
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a class="brown-text text-darken-4" href="index.html.html">Inicio</a></li>
+        <li><a class="brown-text text-darken-4" href="index.html">Inicio</a></li>
         <li><a class="brown-text text-darken-4" href="somos.html">¿Quienes somos?</a></li>
         <li><a class="brown-text text-darken-4" href="contacto.html">Contáctanos</a></li>
+        <li><a class="brown-text text-darken-4" href="recamara.html">Recámara</a></li>
+        <li><a class="brown-text text-darken-4" href="salas.html">Salas</a></li>
+        <li><a class="brown-text text-darken-4" href="accesorios.html">Accesorios</a></li>
       </ul>
       </div>
     </nav>
@@ -47,7 +51,7 @@
         <div class="row">
       <div class="col m6 s12">
         <div class="card-panel tarjeta-info letra">
-          <span><h5>MUEBs es una muebleria moderna con muebles de línea hechos por los mejores diseñadores, con los mejores materiales y lo más importante, diseñados especialmente para ti y tu confort. <br> <br>¡Decídete! Has de tu casa, tu hogar.</h5>
+          <span><h5>MUEBs es una muebleria moderna con muebles de línea hechos por los mejores diseñadores, con los mejores materiales y lo más importante, diseñados especialmente para ti y tu confort. <br> <br>¡Decídete! Haz de tu casa, tu hogar.</h5>
           </span>
         </div>
       </div>
